--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -92,7 +92,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+      url: https://nldvos.github.io/ # ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
